--- a/assets/pug/pages/template/feather.pug
+++ b/assets/pug/pages/template/feather.pug
@@ -44,7 +44,7 @@ html(lang='en')
                   div.col-span-12
                      div.card
                         div.card-header.border-b-0
-                           h3.text-lg.font-bold Icons
+                           h3.text-lg.font-bold Feather Icons
                         div.card-body 
                            div(class="grid grid-cols-12 gap-4 2sm:gap-2") 
                               each icon in FEATHER_ICON_LIST
