--- a/html/template/cart.html
+++ b/html/template/cart.html
@@ -1140,7 +1140,7 @@
                     </thead>
                     <tbody>
                       <tr class="hover:bg-gray-light cart-item">
-                        <td class="min-w-[155px]">
+                        <td class="min-w-[180px]">
                           <div class="flex items-center gap-2"><img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/1.jpg" alt="Samsung TV">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Samsung TV</h4><span class="text-[0.813rem] font-medium text-content">#GS-4567</span>
@@ -1181,7 +1181,7 @@
                         </td>
                       </tr>
                       <tr class="hover:bg-gray-light cart-item">
-                        <td class="min-w-[155px]">
+                        <td class="min-w-[180px]">
                           <div class="flex items-center gap-2"><img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/2.jpg" alt="Spring Bed">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Spring Bed</h4><span class="text-[0.813rem] font-medium text-content">#GS-6567</span>
@@ -1222,7 +1222,7 @@
                         </td>
                       </tr>
                       <tr class="hover:bg-gray-light cart-item">
-                        <td class="min-w-[155px]">
+                        <td class="min-w-[180px]">
                           <div class="flex items-center gap-2"><img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/3.jpg" alt="Long Dress">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Long Dress</h4><span class="text-[0.813rem] font-medium text-content">#GS-9211</span>
@@ -1263,7 +1263,7 @@
                         </td>
                       </tr>
                       <tr class="hover:bg-gray-light cart-item">
-                        <td class="min-w-[155px]">
+                        <td class="min-w-[180px]">
                           <div class="flex items-center gap-2"><img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/4.jpg" alt="Phillip Lightbulb">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Phillip Lightbulb</h4><span class="text-[0.813rem] font-medium text-content">#GS-5214</span>
@@ -1304,7 +1304,7 @@
                         </td>
                       </tr>
                       <tr class="hover:bg-gray-light cart-item">
-                        <td class="min-w-[155px]">
+                        <td class="min-w-[180px]">
                           <div class="flex items-center gap-2"><img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/5.jpg" alt="Ladies Handbags">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Ladies Handbags</h4><span class="text-[0.813rem] font-medium text-content">#GS-65411</span>
@@ -1345,7 +1345,7 @@
                         </td>
                       </tr>
                       <tr class="hover:bg-gray-light cart-item">
-                        <td class="min-w-[155px]">
+                        <td class="min-w-[180px]">
                           <div class="flex items-center gap-2"><img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/6.png" alt="Latest Cosmetics">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Latest Cosmetics</h4><span class="text-[0.813rem] font-medium text-content">#GS-34611</span>
@@ -1386,7 +1386,7 @@
                         </td>
                       </tr>
                       <tr class="hover:bg-gray-light cart-item">
-                        <td class="min-w-[155px]">
+                        <td class="min-w-[180px]">
                           <div class="flex items-center gap-2"><img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/7.png" alt="Latest Nike shoes">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Latest Nike shoes</h4><span class="text-[0.813rem] font-medium text-content">#GS-64247</span>
@@ -1427,7 +1427,7 @@
                         </td>
                       </tr>
                       <tr class="hover:bg-gray-light cart-item">
-                        <td class="min-w-[155px]">
+                        <td class="min-w-[180px]">
                           <div class="flex items-center gap-2"><img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/8.png" alt="Apple MacBook Air">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Apple MacBook Air</h4><span class="text-[0.813rem] font-medium text-content">#GS-3452</span>
@@ -1482,7 +1482,7 @@
                   <div class="flex flex-col gap-1"> 
                     <label class="font-bold text-xs text-primary" for="coupon-code">Apply Coupon Code</label>
                     <div class="flex items-center justify-center"> 
-                      <input class="p-[11px] w-full rounded-br-none rounded-tr-none border border-border-light rounded-5 text-xs text-content" type="text" placeholder="Enter code" id="coupon-code"><span class="flex items-center justify-center bg-primary text-white rounded-5 border-none rounded-bl-none rounded-tl-none font-medium text-xs py-[12px] px-[11px]">Apply</span>
+                      <input class="p-[11px] w-full rounded-br-none rounded-tr-none border border-border-light rounded-5 text-xs text-content rounded-br-5 rtl:rounded-bl-none rounded-tr-5 rtl:rounded-tl-none" type="text" placeholder="Enter code" id="coupon-code"><span class="flex items-center justify-center bg-primary text-white rounded-5 border-none rounded-bl-none rounded-tl-none font-medium text-xs py-[12px] px-[11px] rtl:rounded-bl-5 rtl:rounded-br-none rtl:rounded-tr-none rounded-tl-5">Apply</span>
                     </div>
                   </div>
                   <div class="divider w-full my-3"> </div>
