--- a/html/template/iconly.html
+++ b/html/template/iconly.html
@@ -33,7 +33,7 @@
                     <use href="../../assets/svg/_sprite.svg#Category"> </use>
                   </svg>
                 </button>
-                <h1 class="flex items-center gap-1 text-lg font-extrabold leading-none sm:hidden 4xl:text-base">Feather</h1>
+                <h1 class="flex items-center gap-1 text-lg font-extrabold leading-none sm:hidden 4xl:text-base">Iconly</h1>
               </div>
               <div class="right-header flex items-center flex-1 sm:gap-[calc(7px_+_(14_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] gap-[calc(16px_+_(20_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))]  justify-end">
                 <div class="search-box-wrapper transition-all duration-300 max-w-[40%] xl:scale-0 xl:opacity-0 xl:invisible xl:px-body-space xl:max-w-full w-full xl:z-[5] flex-1 xl:absolute xl:left-0">
@@ -839,7 +839,7 @@
                         <li class="px-2"> <span>/</span></li>
                         <li class="breadcrumb-items capitalize">Icons</li>
                         <li class="px-2"> <span>/</span></li>
-                        <li class="breadcrumb-items capitalize active">Feather</li>
+                        <li class="breadcrumb-items capitalize active">Iconly</li>
                       </ol>
                     </nav>
                   </div>
@@ -1128,7 +1128,7 @@
             <div class="col-span-12">
               <div class="card">
                 <div class="card-header border-b-0">
-                  <h3 class="text-lg font-bold">Icons</h3>
+                  <h3 class="text-lg font-bold">Iconly Icons</h3>
                 </div>
                 <div class="card-body"> 
                   <div class="grid grid-cols-12 gap-4 2sm:gap-2"> 
