--- a/html/template/add-product.html
+++ b/html/template/add-product.html
@@ -1130,7 +1130,7 @@
         <!-- Page Body Start-->
         <div class="page-body"> 
           <div class="grid grid-cols-12 gap-4 add-product card">
-            <div class="col-span-8 pr-4 border-r 2lg:col-span-12 lg:border-b lg:border-r-0 lg:pr-0 rtl:lg:pl-0 border-border-light rtl:border-l rtl:pl-4 rtl:pr-unset">
+            <div class="col-span-8 pr-4 border-r 2lg:col-span-12 2lg:border-b 2lg:pb-4 2lg:border-r-0 border-border-light rtl:border-l rtl:2lg:border-l-0 rtl:border-r-0 rtl:pl-4 rtl:pr-unset">
               <div> 
                 <h5 class="text-title font-semibold mb-3">Create Product </h5>
                 <form class="flex flex-col gap-4 m-0 theme-form">
@@ -1175,8 +1175,8 @@
                     </div>
                     <div class="col-span-4 2md:col-span-12">
                       <label for="price">Price </label>
-                      <div class="flex items-center"><span class="flex items-center justify-center bg-gray-light text-title border border-border-light rounded-5 rounded-br-none rounded-tr-none font-medium text-xs !leading-[18px] py-[12px] px-[11px]">$</span>
-                        <input class="p-[11px] w-full rounded-5 border border-border-light text-xs text-content !rounded-bl-none !rounded-tl-none" type="text" id="price" placeholder="300">
+                      <div class="flex items-center"><span class="flex items-center justify-center bg-gray-light text-title border border-border-light rounded-5 rounded-br-none rounded-tr-none font-medium text-xs !leading-[18px] py-[12px] px-[11px] rtl:rounded-tr-5 rtl:rounded-br-5 rtl:rounded-tl-none rtl:rounded-bl-none">$</span>
+                        <input class="p-[11px] w-full rounded-5 border border-border-light text-xs text-content !rounded-bl-none !rounded-tl-none rtl:!rounded-tr-none rtl:!rounded-br-none rtl:!rounded-tl-5 rtl:!rounded-bl-5" type="text" id="price" placeholder="300">
                       </div>
                     </div>
                   </div>
@@ -1191,8 +1191,8 @@
                     </div>
                     <div class="col-span-6 2md:col-span-6 sm:col-span-12">
                       <label for="discount">Discount</label>
-                      <div class="flex items-center"><span class="flex items-center justify-center bg-gray-light text-title border border-border-light rounded-5 rounded-br-none rounded-tr-none font-medium text-xs !leading-[18px] py-[12px] px-[11px]">%</span>
-                        <input class="p-[11px] w-full rounded-5 border border-border-light text-xs text-content !rounded-bl-none !rounded-tl-none" type="text" id="discount" placeholder="10">
+                      <div class="flex items-center"><span class="flex items-center justify-center bg-gray-light text-title border border-border-light rounded-5 rounded-br-none rounded-tr-none font-medium text-xs !leading-[18px] py-[12px] px-[11px] rtl:rounded-tr-5 rtl:rounded-br-5 rtl:rounded-tl-none rtl:rounded-bl-none">%</span>
+                        <input class="p-[11px] w-full rounded-5 border border-border-light text-xs text-content !rounded-bl-none !rounded-tl-none rtl:!rounded-tr-none rtl:!rounded-br-none rtl:!rounded-tl-5 rtl:!rounded-bl-5" type="text" id="discount" placeholder="10">
                       </div>
                     </div>
                   </div>
