--- a/html/template/feather.html
+++ b/html/template/feather.html
@@ -1128,7 +1128,7 @@
             <div class="col-span-12">
               <div class="card">
                 <div class="card-header border-b-0">
-                  <h3 class="text-lg font-bold">Icons</h3>
+                  <h3 class="text-lg font-bold">Feather Icons</h3>
                 </div>
                 <div class="card-body"> 
                   <div class="grid grid-cols-12 gap-4 2sm:gap-2"> 
